# ShadowsocksUWP

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  ShadowsocksUWP.sln  nuget.config  shadowsocks-uwp.sln
ShadowsocksBG/: ShadowsocksBG.csproj  ShadowsocksTask.cs  TunInterface.cs  VpnContext.cs  VpnContextNew.cs  VpnPlugInImpl.cs  VpnPlugin.cs  VpnPluginState.cs  VpnTask.cs
ShadowsocksBG/Adapter/: IAdapterSocket.cs  ProxyAdapter.cs  RawShadowsocksAdapter.cs  TunSocketAdapter.cs
ShadowsocksBG/DNS/: DnsProxyServer.cs
ShadowsocksBG/Properties/: AssemblyInfo.cs
ShadowsocksUWP/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  RouteTablePage.xaml  RouteTablePage.xaml.cs  ShadowsocksUWP.csproj
ShadowsocksUWP/Properties/: AssemblyInfo.cs
Wintun2socks/: Random.cpp  Random.h  TcpSocket.cpp  TcpSocket.h  Wintun.cpp  Wintun.h  sio.c  sys_arch.c  wintun2socks.vcxproj  wintun2socks.vcxproj.filters
Wintun2socks/lwip/lwip/apps/httpd/makefsdata/: makefsdata.c
Wintun2socks/lwip/lwip/core/: tcp_in.c  tcp_out.c  udp.c
Wintun2socks/lwip/lwip/core/ipv4/: ip4.c
Wintun2socks/lwip/lwip/include/: lwipopts.h
Wintun2socks/lwip/lwip/include/arch/: cc.h
shadowsocks-uwp/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  shadowsocks-uwp.csproj
shadowsocks-uwp/Properties/: AssemblyInfo.cs
